# ass1

./: README.md
comand/: package.xml  setup.py
comand/launch/: simulation.launch.py
comand/models/cinco/: model.sdf
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/comand/share/comand/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/comand/share/comand/launch/: simulation.launch.py
install/comand/share/comand/models/cinco/: model.config  model.sdf
install/comand/share/comand/models/cinco/meshes/: cinco.stl
install/comand/share/comand/models/diff_robot/: model.config  model.sdf
install/comand/share/comand/worlds/: building_robot.sdf  teste.sdf
log/: latest_build
models/: cinco.stl
models/cinco/: model.config
models/diff_robot/: model.config  model.sdf
src/comand/: package.xml  setup.cfg  setup.py
src/comand/comand/: footprint_utils.py  lidar.html  lidar.html:Zone.Identifier  spawn_robot_node.py  wall_follower.py
src/comand/launch/: simulation.launch.py  simulation.launch.py:Zone.Identifier
src/comand/models/cinco/: model.config  model.sdf
src/comand/models/cinco/meshes/: cinco.stl
src/comand/models/diff_robot/: model.config  model.sdf
src/comand/worlds/: building_robot.sdf  teste.sdf
worlds/: building_robot.sdf  teste.sdf
